Fix the #aside (side bar) height to fill page vertically overlapping the header.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -9,7 +9,6 @@
   text-align: center;
   margin-bottom: 0;
   padding: 5px;
-  // border: 1px solid;
 }
 
 #aside {
@@ -17,7 +16,6 @@
   height: 100%;
   float: left;
   background-color: rgba(15,15,15,0.15);
-  border-radius: 5px;
   z-index: 1000
 }
 #section {
